--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-loading-icons": "^1.0.6",
     "react-player": "^2.9.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
